# another-swayrst

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/another_swayrst/: __init__.py  cli.py  main.py  types.py
src/test-scripts/: size-tests.py
test-profiles/: 3-columns.json  4-columns.json  footer.json
test-windows/: col1_row1.py  col1_row2.py  col1_row3.py  col1_row4.py  col2_row1.py  col2_row2.py  col2_row3.py  col2_row4.py  col3_row1.py  col3_row2.py  col3_row3.py  col3_row4.py  col4_row1.py  col4_row2.py  col4_row3.py  col4_row4.py
